[A] - added responsive design to quiz and index

--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -166,7 +166,7 @@
 
 				<!-- Submit button -->
 				<div class="bubble" id="submit-bubble">
-					<div class="grow">
+					<div class="not-grow">
 						<div class="content">
 							<label for="submit">How did I do?</label>
 							<input type="submit" id="submit"/>
