[R] - refactored topic.html
li needs to be direct child of ul

--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -112,7 +112,7 @@
 				<h2>Animations/Transitions</h2>
 			</section>
 			<section class="no-parallax">
-				<h3>Most obviously, animations/transitions - as used on <a href="index.html#bg-container" target="_blank">homepage</a> and <a href="quiz.html#container" target="_blank">quiz</a>.</h3>
+				<h3>And obviously, animations/transitions - as used on <a href="index.html#bg-container" target="_blank">homepage</a> and <a href="quiz.html#container" target="_blank">quiz</a>.</h3>
 				<p>
 					Using keyframes, animations in CSS is actually very simple. The transformation function will be applied
 					dynamically to the element's display, changing the element's attributes according to the pre-set parameters
