[C] - changed wording in enhancements

--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -54,7 +54,7 @@
 				</p>
 				<h3>But that's not all! Try toggling darkmode. Do the background images appear to be darker/lighter?</h3>
 				<p>
-					By applying the built-in function linear-gradient(), putting the opacity to 65% and passing the image in as a parameter, CSS automatically
+					By applying the built-in function linear-gradient(), putting the opacity to 65% and applying the image as an underneath layer, CSS automatically
 					generates a "shader" to cover over the image. Passing this entire function as a parameter to the background variable creates two corresponding
 					shaders to help aid in text visibility in both light and darkmode.
 				</p>
