[F] - fixed figcaption and img sizing

--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -69,7 +69,7 @@
 							<div class="content">
 								<div>
 									<label for="question1">Answer:</label>
-									<input type="text" id="question1" name="support_for" placeholder="Your answer..." pattern="[a-z A-Z]{2,50}">
+									<input type="text" id="question1" name="support_for" placeholder="Your answer..." pattern="[a-z A-Z]{2,50}" required>
 								</div>
 							</div>
 						</div>
@@ -83,7 +83,7 @@
 						<div class="question">
 							<div class="content">
 								<div class="multiple-choice">
-									<input type="radio" id="first_choice" name="year_developed" value="2002">
+									<input type="radio" id="first_choice" name="year_developed" value="2002" required>
 									<label for="first_choice">2002</label>
 								</div>
 								<div class="multiple-choice">
