--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -389,40 +389,42 @@
 					load faster on a web page, though depending on the compression, a WebP can have up to a
 					26% smaller file size over a best scenario PNG.
 				</p>
-				<table>
-					<tr>
-						<th>File dimension</th>
-						<th>GIF</th>
-						<th>Webp</th>
-						<th>APNG</th>
-						<th>GIF vs APNG</th>
-						<th>WebP vs APNG</th>
-					</tr>
-					<tr>
-						<td>800x450</td>
-						<td>37.9MB</td>
-						<td>30.82MB</td>
-						<td>31.22MB</td>
-						<td>-17.63%</td>
-						<td>1.30%</td>
-					</tr>
-					<tr>
-						<td>300x169</td>
-						<td>4.93MB</td>
-						<td>4.16MB</td>
-						<td>3.97MB</td>
-						<td>-19.47%</td>
-						<td>-4.57%</td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>Average</td>
-						<td>-17.35%</td>
-						<td>0.03%</td>
-					</tr>
-				</table>
+				<div class="overflowTable">
+					<table>
+						<tr>
+							<th>File dimension</th>
+							<th>GIF</th>
+							<th>Webp</th>
+							<th>APNG</th>
+							<th>GIF vs APNG</th>
+							<th>WebP vs APNG</th>
+						</tr>
+						<tr>
+							<td>800x450</td>
+							<td>37.9MB</td>
+							<td>30.82MB</td>
+							<td>31.22MB</td>
+							<td>-17.63%</td>
+							<td>1.30%</td>
+						</tr>
+						<tr>
+							<td>300x169</td>
+							<td>4.93MB</td>
+							<td>4.16MB</td>
+							<td>3.97MB</td>
+							<td>-19.47%</td>
+							<td>-4.57%</td>
+						</tr>
+						<tr>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td><span class = "bold">Average</span></td>
+							<td>-17.35%</td>
+							<td>0.03%</td>
+						</tr>
+					</table>
+				</div>
 				<p>
 					If you compare these multi-image file formats to MP4 and WebM for an animation, the
 					benefits of using other animation formats is apparent.
