--- a/assign1/enhancements.html
+++ b/assign1/enhancements.html
@@ -24,7 +24,7 @@
                     <li><a href="quiz.html" target="_blank">Quiz</a></li>
                     <li><a href="topic.html" target="_blank">Topic</a></li>
                     <li><a href="index.html" target="_blank">Home</a></li>
-					<li><a href="https://www.youtube.com/watch?v=iik25wqIuFo"><img alt="youtube button" class="youtube" src="images/youtube.png "/></a></li>
+					<li><a href="https://youtu.be/1NSN55hGJ10"><img alt="youtube button" class="youtube" src="images/youtube.png "/></a></li>
 				</ul>
 			</nav>
 		</header>
