--- a/assign1/topic.html
+++ b/assign1/topic.html
@@ -32,7 +32,7 @@
 					<li><a href="index.html" target="_blank">Home</a></li>
 					<li>
 						<a
-							href="https://www.youtube.com/watch?v=iik25wqIuFo"
+							href="https://youtu.be/1NSN55hGJ10"
 							target="_blank"
 							rel="noreferrer noopener"
 							><img alt="youtube button" class="youtube" src="images/youtube.png "
