--- a/assign1/index.html
+++ b/assign1/index.html
@@ -6,8 +6,9 @@
 		<meta name="keywords" content="APNG, animated portable network graphics, homepage"/>
 		<meta name="author" content="Jack"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link href="styles/style.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="styles/style.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
         <title>APNG Homepage</title>
     </head>
     <body>
