--- a/assign1/quiz.html
+++ b/assign1/quiz.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>APNG quiz</title>
 		<link href="styles/style.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Google+Sans" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	
@@ -83,7 +84,7 @@
 						<div class="question">
 							<div class="content">
 								<div class="multiple-choice">
-									<input type="radio" id="first_choice" name="year_developed" value="2002" required>
+									<input type="radio" id="first_choice" name="year_developed" value="2002" required="required">
 									<label for="first_choice">2002</label>
 								</div>
 								<div class="multiple-choice">
